[gd_scene load_steps=4 format=3 uid="uid://dotjtrd27ecxm"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_w58xq"]
[ext_resource type="SpriteFrames" uid="uid://4wwyfb1u7h02" path="res://resources/entities/player.tres" id="2_mlavj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u4hie"]
radius = 14.0

[node name="player" type="CharacterBody2D"]
collision_mask = 26
script = ExtResource("1_w58xq")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -13)
shape = SubResource("CapsuleShape2D_u4hie")
debug_color = Color(0.975255, 0, 0.420764, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -16)
scale = Vector2(0.944, 1)
sprite_frames = ExtResource("2_mlavj")
animation = &"idle"

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[node name="leftArm" type="Marker2D" parent="."]
position = Vector2(-9, -21)

[node name="rightArm" type="Marker2D" parent="."]
position = Vector2(11, -21)

[node name="leftLeg" type="Marker2D" parent="."]
position = Vector2(-4, 7)

[node name="rightLeg" type="Marker2D" parent="."]
position = Vector2(7, 7)
